--- a/main-styles.css
+++ b/main-styles.css
@@ -21,13 +21,39 @@ body {
   background: #090b1a;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 98vh;
+}
+.wrapper .card-component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  text-align: center;
+  width: 90%;
+  background: #1b1938;
+  border-radius: 2%;
+}
+.wrapper .card-component .card-stats {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.wrapper .card-component .card-stats .card-stat {
+  text-transform: uppercase;
+}
+
 .img-container {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 74%;
 }
 .img-container img {
   width: 100%;
   height: 100%;
+  border-radius: 2% 2% 0 0;
 }
 
 /*# sourceMappingURL=main-styles.css.map */
