--- a/main-styles.scss
+++ b/main-styles.scss
@@ -19,13 +19,38 @@ font-family: 'Lexend Deca',sans-serif;
 body {
   background: hsl(233, 47%, 7%);
 }
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  height: 98vh;
+  .card-component{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    margin:auto;
+    text-align:center;
+    width: 90%;
+    background:  hsl(244, 38%, 16%);
+    border-radius:2%;
+    .card-stats{
+      padding: 0;
+      margin: 0;
+      list-style:none;
+      .card-stat{
+      text-transform:uppercase;
+      }
+    }
+  }
+}
 
 .img-container {
-  width:300px;
-  height:300px;
+  width:100%;
+  height:74%;
   img {
     width: 100%;
     height: 100%;
+    border-radius:2% 2% 0 0;
   }
 }
 
