--- a/main-styles.css
+++ b/main-styles.css
@@ -15,6 +15,7 @@ font-family: 'Lexend Deca',sans-serif;
 * {
   font-family: "Inter", sans-serif;
   font-size: 15px;
+  color: white;
 }
 
 body {
@@ -37,13 +38,37 @@ body {
   background: #1b1938;
   border-radius: 2%;
 }
+.wrapper .card-component .card-header {
+  font-size: 1.8rem;
+  padding: 1rem 2rem;
+  margin: 0;
+}
+.wrapper .card-component .card-header .highlighted-words {
+  font-size: 1.8rem;
+  color: #aa5cdb;
+}
+.wrapper .card-component .card-info {
+  color: rgba(255, 255, 255, 0.75);
+  margin: 0;
+  padding: 1rem 2rem;
+  line-height: 1.6;
+}
 .wrapper .card-component .card-stats {
   padding: 0;
+  padding-bottom: 2rem;
   margin: 0;
   list-style: none;
 }
 .wrapper .card-component .card-stats .card-stat {
+  font-size: 1.8rem;
   text-transform: uppercase;
+}
+.wrapper .card-component .card-stats .card-stat h1 {
+  font-size: 1.3rem;
+}
+.wrapper .card-component .card-stats .card-stat h2 {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 0.7rem;
 }
 
 .img-container {
@@ -54,6 +79,18 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 2% 2% 0 0;
+}
+.img-container::after {
+  background: #aa5cdb;
+  content: " ";
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  top: -101.5%;
+  border-radius: 2% 2% 0 0;
+  opacity: 0.75;
 }
 
 /*# sourceMappingURL=main-styles.css.map */
