--- a/main-styles.scss
+++ b/main-styles.scss
@@ -14,6 +14,7 @@ font-family: 'Lexend Deca',sans-serif;
 * {
   font-family: 'Inter', sans-serif;
   font-size: 15px;
+  color: hsl(0,0%,100%);
 }
 
 body {
@@ -33,12 +34,36 @@ body {
     width: 90%;
     background:  hsl(244, 38%, 16%);
     border-radius:2%;
+    .card-header{
+      font-size: 1.8rem;
+      padding: 1rem 2rem;
+      margin: 0;
+      .highlighted-words{
+       font-size: 1.8rem; 
+       color: hsl(277, 64%, 61%);
+      }
+    }
+    .card-info{
+      color: hsla(0, 0%, 100%, 0.75);
+      margin: 0;
+      padding: 1rem 2rem;
+      line-height: 1.6;
+    }
     .card-stats{
       padding: 0;
+      padding-bottom: 2rem;
       margin: 0;
       list-style:none;
       .card-stat{
-      text-transform:uppercase;
+        font-size:1.8rem;
+        text-transform:uppercase;
+        h1{
+          font-size:1.3rem;
+        }
+        h2{
+          color: hsla(0, 0%, 100%, 0.6);
+          font-size: 0.7rem;
+        }
       }
     }
   }
@@ -52,5 +77,18 @@ body {
     height: 100%;
     border-radius:2% 2% 0 0;
   }
-}
+  &::after{
+    background:hsl(277, 64%, 61%);
+    content:" ";
+    width:100%;
+    height:100%;
+    position:relative;
+    z-index:1;
+    display: inline-block;
+    top: -101.5%;
+    border-radius: 2% 2% 0 0;
+    opacity: 0.75;
+   }
+ }
+
 
