--- a/main-styles.scss
+++ b/main-styles.scss
@@ -15,6 +15,7 @@ font-family: 'Lexend Deca',sans-serif;
   font-family: 'Inter', sans-serif;
   font-size: 15px;
   color: hsl(0,0%,100%);
+  box-sizing: border-box;
 }
 
 body {
@@ -33,36 +34,40 @@ body {
     text-align:center;
     width: 90%;
     background:  hsl(244, 38%, 16%);
-    border-radius:2%;
-    .card-header{
-      font-size: 1.8rem;
-      padding: 1rem 2rem;
-      margin: 0;
-      .highlighted-words{
-       font-size: 1.8rem; 
-       color: hsl(277, 64%, 61%);
-      }
-    }
-    .card-info{
-      color: hsla(0, 0%, 100%, 0.75);
-      margin: 0;
-      padding: 1rem 2rem;
-      line-height: 1.6;
-    }
-    .card-stats{
-      padding: 0;
-      padding-bottom: 2rem;
-      margin: 0;
-      list-style:none;
-      .card-stat{
-        font-size:1.8rem;
-        text-transform:uppercase;
-        h1{
-          font-size:1.3rem;
+    border-radius: 25px;
+    max-width: 500px;
+    .text-container{
+      width: 100%;
+      .card-header{
+        font-size: 1.8rem;
+        padding: 1rem 2rem;
+        margin: 0;
+        .highlighted-words{
+          font-size: 1.8rem; 
+          color: hsl(277, 64%, 61%);
         }
-        h2{
-          color: hsla(0, 0%, 100%, 0.6);
-          font-size: 0.7rem;
+      }
+      .card-info{
+        color: hsla(0, 0%, 100%, 0.75);
+        margin: 0;
+        padding: 1rem 2rem;
+        line-height: 1.6;
+      }
+      .card-stats{
+        padding: 0;
+        padding-bottom: 2rem;
+        margin: 0;
+        list-style:none;
+        .card-stat{
+          font-size:1.8rem;
+          text-transform:uppercase;
+          h1{
+            font-size:1.3rem;
+          }
+          h2{
+            color: hsla(0, 0%, 100%, 0.6);
+            font-size: 0.7rem;
+          }
         }
       }
     }
@@ -72,6 +77,7 @@ body {
 .img-container {
   width:100%;
   height:74%;
+  position:relative;
   img {
     width: 100%;
     height: 100%;
@@ -82,13 +88,60 @@ body {
     content:" ";
     width:100%;
     height:100%;
-    position:relative;
+    top:0;
+    left:0;
+    position:absolute;
     z-index:1;
     display: inline-block;
-    top: -101.5%;
     border-radius: 2% 2% 0 0;
     opacity: 0.75;
    }
  }
 
+@media (min-width:1440px){
+  .wrapper{
+    .card-component{
+      flex-direction: row-reverse;
+      max-width:1700px;
+      .img-container{
+        height: 100%;
+        img {
+          border-radius:0 25px 25px 0;
+        }
+        &::after{
+          border-radius:0 25px 25px 0;
+        }
+      }
+      .text-container{
+        .card-header{
+          text-align: initial;
+          font-size: 2.8rem;
+          padding: 1rem 5rem;
+          .highlighted-words{
+            font-size: inherit;
+          }
+        }
+        .card-info{
+          padding: 1rem 5rem;
+          font-size: 1.3rem;
+          text-align: initial;
+        }
+        .card-stats{
+          display: flex;
+          flex-direction: row;
+          justify-content: space-evenly;
+          padding: 2.5rem 0 0 0;
+          .card-stat{
+            h1{
+              font-size:1.8rem;
+            }
+            h2{
+              font-size:1rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 
